2 columns in projects

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,116 +1,114 @@
 <!--<h2>This page contains links to my projects, completed or otherwise.</h2>-->
-<div class="home-callout-parts text-center container-fluid">
+<div class="home-callout-parts home-callout-projects text-center container-fluid">
   <div class="container text-center">
     <!--<h1><strong> Projects </strong></h1>-->
     <h2><strong>Web Development</strong></h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "//pacific-mesa-35161.herokuapp.com/", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>DevMatch</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://lestleygabo.herokuapp.com/", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Lestley Links</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>    
+    <div class="row"> 
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://learn-rails-by-daniel-kehoe.herokuapp.com/", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Dormer Fan Page</h3>
         <% end %>
       </div>
-    </div>
-    
-    <br> 
-    
-    <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://sample-app-from-rails-tutorial.herokuapp.com/", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Twitter Sample Application</h3>
         <% end %>
       </div>
-            
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://wishpond-test-lestleygabo.herokuapp.com/",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Wishpond Test Project</h3>
         <% end %>
       </div>      
-      
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://lestgabo.github.io/learn_enough_html/moby_dick", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Learn Enough HTML to Be Dangerous</h3>
         <% end %>
       </div>
-      
-
-    </div>
+    </div><!-- row -->
    
   <br>
 
     <h2><strong> Robotics Researcher Co-op </strong></h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://www.youtube.com/watch?v=ZmU-hsg7x38", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>YouTube - Oculus Robot - Platform Control</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "//github.com/elderlyrobotics", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>GitHub - Oculus Robot</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRVpxeE00TVJ6WHM", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Oculus Robot - User Manual </h3>
         <% end %>
       </div>
-    </div>  <!-- /div row of Robotics Research Co-op github and user manual -->
-        
-    <br> 
-    
-    <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNem9Ub2pPU1JXV28", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Oculus Robot - Developer's Manual Part 1</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNMmEzajBpdV83OTQ", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Oculus Robot - Developer's Manual Part 2</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNU3FLdXJ3dWloX1E", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Oculus Robot - Developer's Manual Part 3</h3>
         <% end %>
       </div>
-    </div> <!-- /div row of Robotics Research Co-op manuals -->
+    </div><!-- row -->
         
-  <br>
+<br>
     
     <h2><strong> Simon Fraser University </strong></h2>
-
+<br>
     <h2> ENSC 483 - Modern Control Systems </h2>
     <div class="row">    
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNdXBmQ29SRjVSR2M/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Project 1 - Research Paper Simulation</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNOG5rSUZiMXgyOGM/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Project 2 - Inverted Pendulum</h3>
@@ -122,30 +120,28 @@
       <br>      <br>
     <h2>  ENSC 477 - Biomedical Image Acquisition </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVkI3dXI4X1MxeUU/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 1 - Magnetoencephalography (MEG)</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV2pOUGQ5YXRacWM/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 2 - Simulated Computed Tomography</h3>
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 477 - Biomedical Image Acquisition  -->
-        
-    <br> 
-    
+<br> 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWWc3OUpiVmhXb3M/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 3 - Ultrasound</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNW1TZ1pYSkRtT3M/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 4 - Magnetic Resonance Imaging (MRI)</h3>
@@ -157,19 +153,22 @@
       <br>      <br>
     <h2>  ENSC 476 - Biophotonics and Microscopy Techniques </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRThlbG9YeGVaMXM/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 1 - Confocal</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNmtuZ3FYVjRxV28/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 2 - Optical Coherence Tomography</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNN1pBa1pGa1IyZ0E/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 3 - Quantitative Phase Microscopy</h3>
@@ -181,19 +180,22 @@
       <br>      <br>
     <h2>  ENSC 470 - Optical Engineering and Laser Applications </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUHU5N3FKZ2ZjYXc/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 1 - Basic Optics</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNR1FmaUpsZEJycms/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 2 - Spectrometer</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+    </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNaG1TUTc1Q2xqUW8/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 3 - Laser Gaussian Beam</h3>
@@ -205,30 +207,28 @@
       <br>      <br>
     <h2>  ENSC 305W/440W - Capstone Project </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNeURWWWtwdGJiWkk/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Smart Post - Design Specification</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWDJNRXBIMkRJVHc/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Smart Post - Test Plan</h3>
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 305W/440W - Capstone Project -->
-        
-    <br> 
-    
+<br> 
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Smart Post - Post-Mortem</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUC1semYtQkZ6X0E/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Smart Post - Demo</h3>
@@ -240,7 +240,7 @@
       <br>      <br>
     <h2>  ENSC 424 - Multimedia Communications Engineering </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <!-- col-md-offset-4 -->
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNTFhkTzJQQTFMVFE/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
@@ -253,7 +253,7 @@
       <br>      <br>
     <h2>  ENSC 406 - Engineering Ethics, Law, and Professional Practice </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <!-- col-md-offset-4 -->
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVzM5Y3JLbGpUM2c/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
@@ -266,13 +266,13 @@
       <br>      <br>
     <h2>  ENSC 327 - Communication Systems </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNYmtQcFlkdDV1RWs/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 2 - Amplitude Modulation</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNSUxZYk5QRXFjVnM/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 3 - FM Mod and Demod</h3>
@@ -284,7 +284,7 @@
       <br>      <br>
     <h2>  ENSC 316 - Introduction to Electrodynamics for Engineers </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/1G3iNloqC5cgtvSLjNdUbg2wpRpQAJ4ET/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Design Project - Qi Charging Station</h3>
@@ -296,7 +296,7 @@
       <br>      <br>
     <h2>ENSC 304 - Human Factors and Usability Engineering </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <!-- col-md-offset-4 -->
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNd1FpenlyVG1vWGs/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
@@ -309,30 +309,28 @@
       <br>      <br>
     <h2>  ENSC 225 - Microelectronics I </h2>
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 1 - Operational Amplifier Circuits (Opamps)</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 2 - Diodes and simple diode Circuits</h3>
         <% end %>
       </div>
     </div> <!-- /div row of ENSC 225 - Microelectronics I -->
-        
-    <br> 
-    
+<br> 
     <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUVRRVUJ4Z18wNU0/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 3 - BJTs and single stage BJT amplifier</h3>
         <% end %>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV013alNoNzF2UXc/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Lab 4 - MOSFETs and MOS amplifier</h3>
@@ -344,7 +342,7 @@
       <br>      <br>
     <h2>  PHYS 131 - Physics Laboratory I </h2>
    <div class="row"> 
-      <div class="col-md-4">
+      <div class="col-md-offset-3 col-md-3">
         <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNODFNejdiVEljUHc/view", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
           <h3>Force and Moving Charges</h3>
@@ -354,8 +352,10 @@
  
   </div> <!-- /div of Container for Projects -->
   
+<br>  
+
   <div onclick="topFunction()" class="hvr-float-shadow" title="Back to top">
-    <h3>Back to top</h3>
+    <h2>Back to top</h2>
   </div>
   
 </div> <!-- home-callout-parts text-center container-fluid -->
