--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,10 @@ h1, h2, h3, h4, label, a {
   color: #323232;
 }
 
+h2 {
+  font-weight: bold;
+}
+
 body {
   font-weight: bold;
 }
@@ -59,7 +63,8 @@ svg:not(:root) {
 }
 
 // Background gradient
-.navbar, .home-callout, .home-callout-contact, .not-name-container, .home-callout-parts {
+.navbar, .home-callout, .home-callout-contact,
+.not-name-container, .home-callout-parts, .home-callout-projects {
   //Gradient provided by @_ighosh at uiGradients.com
   // ServQuick from uiGradients.com
   background: #ece9e6; /* fallback for old browsers */
@@ -154,7 +159,6 @@ svg:not(:root) {
   margin-bottom: 0px;
 }
 
-
 // contact page well
 #contact-h1 {
   margin-top: 0px;
@@ -170,6 +174,10 @@ svg:not(:root) {
   padding-left: 0px;
   padding-right: 0px; 
   height: 100vh;
+}
+
+.home-callout-projects {
+  height: 100%;
 }
 
 .not-name-container {
