fixed playstation profile link

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -50,7 +50,7 @@
         <% end %>
       </div>        
       <div class="col-md-3">
-        <%= link_to "https://my.playstation.com/profile/yelnatz/trophies", 
+        <%= link_to "https://psnprofiles.com/yelnatz", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <!--<i class= "fa fa-playstation"></i>-->
           <i class="fa"><%= show_svg("playstation-brands.svg") %></i>
