--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -65,8 +65,9 @@
       <div class="col-md-offset-3 col-md-3">
         <%= link_to "//www.hackerrank.com/beeftosino", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-h-square"></i>
-          <h3>HackerRank</h3>
+          <!--<i class= "fa fa-h-square"></i>-->
+          <i class="fa"><%= show_svg("hackerrank-brands.svg") %></i>
+          <h3 class="hackerrank">HackerRank</h3>
         <% end %>
       </div>      
       <div class="col-md-3">
