--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -47,6 +47,21 @@
         <% end %>
       </div>
     </div><!-- row -->
+<br>
+    <div class="row">
+      <div class="col-md-6">
+        <%= link_to "https://lestgabo.github.io/gallery/",
+        class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <h3>Learn Enough JavaScript to Be Dangerous - Gallery with unbtrosive JavaScript</h3>
+        <% end %>
+      </div>      
+      <div class="col-md-6">
+        <%= link_to "https://lestgabo.github.io/learn_enough_javascript/palindrome.html", 
+        class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <h3>Learn Enough JavaScript to Be Dangerous - Palindrome Detector</h3>
+        <% end %>
+      </div>
+    </div><!-- row -->
    
   <br>
 
