--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,7 +32,7 @@ body {
   font-size: 120px;
 }
 
-// resizing the svg icon of playstation and hackerrank
+// resizing the svg icon of playstation
 svg:not(:root) {
   overflow: hidden;
   width: 110px;
