left align projects and removed circular edge nav bar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -102,7 +102,7 @@ svg:not(:root) {
   padding: 0px 0px;
 }
 .navbar-test {
-  border-radius: 100px;
+  // border-radius: 100px;
   background: #ece9e6; /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ece9e6, #ffffff); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ece9e6, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
