--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,8 +1,8 @@
 <!--<h2>This page contains links to my projects, completed or otherwise.</h2>-->
-<div class="home-callout-parts home-callout-projects text-center container-fluid">
-  <div class="container text-center">
+<div class="home-callout-parts home-callout-projects container-fluid">
+  <div class="container">
     
-    <div id="web-development">
+    <div id="web-development" class="text-left">
       <h2><strong>Web Development</strong></h2>
       <div class="row"> 
         <div class="col-md-6">
@@ -67,7 +67,7 @@
    
   <br>
   
-    <div id="robotics-researcher-co-op">
+    <div id="robotics-researcher-co-op" class="text-left">
       <h2><strong> Robotics Researcher Co-op </strong></h2>
       <div class="row"> 
         <div class="col-md-6">
@@ -117,7 +117,7 @@
           
   <br>
     
-    <div id="simon-fraser-university">
+    <div id="simon-fraser-university" class="text-left">
       <h2><strong> Simon Fraser University </strong></h2>
       <br>
       <h2> Engineering Science 483 - Modern Control Systems </h2>
@@ -386,9 +386,11 @@
   </div> <!-- /div of Container for Projects -->
   
   <br>  
-
-  <div onclick="topFunction()" class="hvr-float-shadow" title="Back to top">
-    <h2>Back to top</h2>
+  
+  <div class="text-center">
+    <div onclick="topFunction()" class="hvr-float-shadow" title="Back to top">
+      <h2>Back to top</h2>
+    </div>
   </div>
   
 </div> <!-- home-callout-parts text-center container-fluid -->
