--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -6,15 +6,15 @@
     <div class="row"> 
       <div class="col-md-offset-3 col-md-3">
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", 
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <h3>Resume</h3>
         <% end %>
       </div>
       <div class="col-md-3">
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", 
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", 
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <h3>Long Resume</h3>
+          <h3>1 page Resume</h3>
         <% end %>
       </div>
     </div>
