--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,13 +1,37 @@
-<div class="home-callout text-center container-fluid">
-  <h3>This should be the contacts page, just about for now</h3>
-  <h3>Contact Lestley</h3>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  
-</div>
-
+<!--<h4>This page contains about</h4>-->
+<div class="home-callout-parts text-center container-fluid">
+  <div class="container text-left">
+    <div class="row"> 
+      <div class="col-md-offset-3 col-md-6">
+        <h2>
+            Lestley Gabo online portfolio <br> profiles, resume, and projects
+        </h2>
+        <h3>
+                  Built using Ruby on Rails
+          <br><br>Used fontawesome for the icons
+          <br><br>Used Bootstrap to pretty up front end
+          <br><br>Used Google Drive to hold pdf files
+          <br><br>Used SendGrid for mailer to contact me
+          <br><br>Deployed to Heroku
+        </h3>
+      </div>
+    </div>
+  </div> <!-- /div row of Container for About -->
+</div> <!-- home-callout-parts text-center container-fluid 
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
