--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,19 +34,29 @@
               
               <li class="navbar-brand nav-item 
               <%= "active" if current_page?(root_path) %>">
-                <%= link_to "Profiles", root_path %></li>    
+                <%= link_to "Profiles", root_path %>
+              </li>    
                 
               <li class="navbar-brand nav-item 
               <%= "active" if current_page?(resume_path) %>">
-                <%= link_to "Resume", resume_path %></li>   
+                <%= link_to "Resume", resume_path %>
+              </li>   
                 
               <li class="navbar-brand nav-item 
               <%= "active" if current_page?(projects_path) %>">
-                <%= link_to "Projects", projects_path %></li>   
+                <%= link_to "Projects", projects_path %>
+              </li>   
                 
               <li class="navbar-brand nav-item 
+              <%= "active" if current_page?(about_path) %>">
+                <%= link_to "About", about_path %>
+              </li>  
+              
+              <li class="navbar-brand nav-item 
               <%= "active" if current_page?(new_contact_path) %>">
-                <%= link_to "Contact", new_contact_path %></li>  
+                <%= link_to "Contact", new_contact_path %>
+              </li>                
+              
             </ul>
           </div><!-- collapse navbar-collapse -->
         </div>
