--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -62,7 +62,17 @@
             <h3>Learn Enough JavaScript to Be Dangerous - Palindrome Detector</h3>
           <% end %>
         </div>
+      </div><!-- row -->    
+    <br>
+      <div class="row">
+        <div class="col-md-6">
+          <%= link_to "https://react-color-picker.herokuapp.com/about",
+          class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+            <h3>React on Rails Practice - React Color Picker</h3>
+          <% end %>
+        </div>      
       </div><!-- row -->
+      
     </div><!-- id: projects -->
    
   <br>
