--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -70,8 +70,16 @@
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
             <h3>React on Rails Practice - React Color Picker</h3>
           <% end %>
+        </div>           
+        <div class="col-md-6">
+          <%= link_to "https://github.com/lestgabo/subtitles/blob/master/README.md",
+          class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+            <h3>Raspberry Pi LCD Touchscreen MPI3508 - how to use instructions</h3>
+          <% end %>
         </div>      
       </div><!-- row -->
+      <!---->
+      
       
     </div><!-- id: projects -->
    
