--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,84 +2,81 @@
 <div class="home-callout-parts text-center container-fluid">
   <div class="container text-center">
     <!--<h1 ><strong> Profiles </strong></h1>-->
-    
+
     <!-- first row -->
-    <div class="row">  
+    <div class="row">
       <div class="col-md-3">
-        <%= link_to "//www.linkedin.com/in/lestgabo/", 
+        <%= link_to "//www.linkedin.com/in/lestgabo/",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-linkedin-square"></i>
+          <i class="fab fa-linkedin"></i>
           <h3>LinkedIn</h3>
         <% end %>
       </div>
-      
+
       <div class="col-md-3">
-        <%= link_to "//github.com/lestgabo", 
+        <%= link_to "//github.com/lestgabo",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-github-square"></i>
+          <i class= "fab fa-github"></i>
           <h3>GitHub</h3>
         <% end %>
       </div>
-      
+
       <div class="col-md-3">
-        <%= link_to "https://www.facebook.com/notthinkingstraight", 
+        <%= link_to "https://www.facebook.com/notthinkingstraight",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-facebook-square"></i>
+          <i class= "fab fa-facebook"></i>
           <h3>Facebook</h3>
         <% end %>
       </div>
-      
+
       <div class="col-md-3">
-        <%= link_to "https://www.instagram.com/lestgabo/", 
+        <%= link_to "https://www.instagram.com/lestgabo/",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-instagram"></i>
+          <i class= "fab fa-instagram"></i>
           <h3>Instagram</h3>
         <% end %>
       </div>
-      
+
     </div><!-- end of first row -->
 <br>
     <!-- second row -->
     <div class="row">
       <div class="col-md-3">
-        <%= link_to "//www.hackerrank.com/beeftosino", 
+        <%= link_to "//www.hackerrank.com/beeftosino",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <!--<i class= "fa fa-h-square"></i>-->
           <i class="fa"><%= show_svg("hackerrank-brands.svg") %></i>
           <h3 class="hackerrank">HackerRank</h3>
         <% end %>
-      </div>      
-      
+      </div>
+
       <div class=" col-md-3"><!--col-md-offset-3-->
-        <%= link_to "https://steamcommunity.com/id/notthinkingstraight", 
+        <%= link_to "https://steamcommunity.com/id/notthinkingstraight",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-          <i class= "fa fa-steam"></i>
+          <i class= "fab fa-steam"></i>
           <h3>Steam</h3>
         <% end %>
-      </div>    
-      
+      </div>
+
       <div class="col-md-3">
-        <%= link_to "https://psnprofiles.com/yelnatz", 
+        <%= link_to "https://psnprofiles.com/yelnatz",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <!--<i class= "fa fa-playstation"></i>-->
           <i class="fa"><%= show_svg("playstation-brands.svg") %></i>
           <h3>Playstation</h3>
         <% end %>
-      </div>      
+      </div>
 
       <div class="col-md-3">
-        <%= link_to "https://myanimelist.net/animelist/beeftosino?status=2", 
+        <%= link_to "https://myanimelist.net/animelist/beeftosino?status=2",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
           <i class= "fa fa-list-ul"></i>
           <h3>MyAnimeList</h3>
         <% end %>
       </div>
-      
-    </div>  <!-- end of second row -->
-    
-  </div> <!-- /div row of Container for Profiles -->
-   
-</div> <!-- home-callout-parts text-center container-fluid 
-    
-    
 
+    </div>  <!-- end of second row -->
+
+  </div> <!-- /div row of Container for Profiles -->
+
+</div> <!-- home-callout-parts text-center container-fluid
