--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,8 @@
 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 @import 'hover';
 
@@ -13,7 +13,7 @@ h1, h2, h3, h4, label, a {
 		//             1.5px  1.5px 0 #000,
 		//             1.5px -1.5px 0 #000,
   //               -1.5px -1.5px 0 #000;
-                
+
   // text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   // black but not too black hex color
   color: #323232;
@@ -28,7 +28,7 @@ body {
 }
 
 // size of profile icons
-.fa {
+.fa, .fab {
   font-size: 120px;
 }
 
@@ -78,7 +78,7 @@ svg:not(:root) {
 }
 
 // active nav-bar color
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active 
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active
   > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: #555;
     background: #ece9e6;
@@ -132,7 +132,7 @@ svg:not(:root) {
     margin: 0px 10px;
 }
 
-.navbar-default .navbar-brand, 
+.navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
   color: #323232;
   &:hover {
@@ -158,7 +158,7 @@ svg:not(:root) {
 .jumbotron {
   // background color becomes not white
   background-color: inherit;
-  
+
   // too much space from name to profile
   margin-bottom: 0px;
 }
@@ -176,7 +176,7 @@ svg:not(:root) {
   // padding-bottom: 360.50px;
   // padding-bottom: 200px;
   padding-left: 0px;
-  padding-right: 0px; 
+  padding-right: 0px;
   height: 100vh;
 }
 
@@ -211,12 +211,12 @@ svg:not(:root) {
    transition-property: transform;
    transform: translateZ(0);
    transition: box-shadow 0.5s cubic-bezier(0.390, 0.500, 0.150, 1.360);
-   
+
    &:hover {
      box-shadow: 0 0 0 35px rgba(0,0,0,0.25) inset;
      color: white;
    }
-  
+
    &:active {
      transform: translateY(3px);
    }
@@ -228,5 +228,3 @@ svg:not(:root) {
 ////////////////////////////////////////////////////////////////////
 // https://github.com/Leyka/hover-rails
 // Hover-rails
-
-
