--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
     <!-- favicon for icons -->
     <!--<link rel="icon" type="image/png" href="/assets/favicon.png">-->
     <%= favicon_link_tag asset_path('lestleygabo.png'), :rel => 'icon', :type =>  'image/png' %>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   </head>
 
   <body>
@@ -21,7 +22,7 @@
       <nav class="navbar navbar-default" role="navigation">
         <div class='container'>
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" 
+            <button type="button" class="navbar-toggle"
             data-toggle="collapse" data-target="#main-nav-collapse">
               <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
@@ -31,45 +32,45 @@
           </div>
           <div class="collapse navbar-collapse navbar-test" id="main-nav-collapse">
             <ul class="nav navbar-nav">
-              
-              <li class="navbar-brand nav-item 
+
+              <li class="navbar-brand nav-item
               <%= "active" if current_page?(root_path) %>">
                 <%= link_to "Profiles", root_path %>
-              </li>    
-                
-              <li class="navbar-brand nav-item 
+              </li>
+
+              <li class="navbar-brand nav-item
               <%= "active" if current_page?(resume_path) %>">
                 <%= link_to "Resume", resume_path %>
-              </li>   
-                
-              <li class="navbar-brand nav-item 
+              </li>
+
+              <li class="navbar-brand nav-item
               <%= "active" if current_page?(projects_path) %>">
                 <%= link_to "Projects", projects_path %>
-              </li>   
-                
-              <li class="navbar-brand nav-item 
+              </li>
+
+              <li class="navbar-brand nav-item
               <%= "active" if current_page?(about_path) %>">
                 <%= link_to "About", about_path %>
-              </li>  
-              
-              <li class="navbar-brand nav-item 
+              </li>
+
+              <li class="navbar-brand nav-item
               <%= "active" if current_page?(new_contact_path) %>">
                 <%= link_to "Contact", new_contact_path %>
-              </li>                
-              
+              </li>
+
             </ul>
           </div><!-- collapse navbar-collapse -->
         </div>
       </nav><!-- navbar navbar-default -->
-      
+
       <div class="container alert-width text-center">
         <% flash.each do |type,msg| %>
           <%= content_tag :div, msg, class: "alert alert-#{type}" %>
         <% end %>
       </div>
     </div>
-        
+
         <%= yield %>
-        
+
   </body>
 </html>
