--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -3,38 +3,23 @@
 <div class="home-callout-parts text-center container-fluid">
   <div class="container text-center">
     <!--<h1><strong> Resume </strong></h1>-->
-    <div class="row"> 
+    <div class="row">
       <div class="col-md-offset-3 col-md-3">
         <!--Resume-->
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk", 
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNNXRlR3R0S1I4bVk",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class="fas fa-file-pdf"></i>
           <h3>Resume</h3>
         <% end %>
       </div>
       <div class="col-md-3">
-        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE", 
+        <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNRGQ3ZVlUSFlQQVE",
         class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+          <i class="far fa-file-pdf"></i>
           <h3>1 page Resume</h3>
         <% end %>
       </div>
     </div>
    </div> <!-- /div row of Container for Resume -->
-   
-</div> <!-- home-callout-parts text-center container-fluid 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+
+</div> <!-- home-callout-parts text-center container-fluid
