add Hardware section

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,17 @@ body {
   font-weight: bold;
 }
 
+// horizontal line
+hr {
+  border-color: black;
+  display: block;
+  height: 1px;
+border: 0;
+border-top: 1px solid #ccc;
+margin: 1em 0;
+padding: 0; 
+}
+
 // size of profile icons
 .fa, .fab, .far, .fas {
   font-size: 120px;
