--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
 
     <div id="web-development" class="text-left">
-      <h2><strong>Web Development</strong></h2>
+      <h2><strong>Web development</strong></h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "//pacific-mesa-35161.herokuapp.com/",
@@ -14,7 +14,7 @@
         <div class="col-md-6">
           <%= link_to "https://lestleygabo.herokuapp.com/",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Lestley Links</h3>
+            <h3>Lestley links</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -23,13 +23,13 @@
         <div class="col-md-6">
           <%= link_to "https://learn-rails-by-daniel-kehoe.herokuapp.com/",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Dormer Fan Page</h3>
+            <h3>Natalie Dormer fan page</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://sample-app-from-rails-tutorial.herokuapp.com/",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Twitter Sample Application</h3>
+            <h3>Twitter clone app</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -38,13 +38,13 @@
         <div class="col-md-6">
           <%= link_to "https://wishpond-test-lestleygabo.herokuapp.com/",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Wishpond Test Project</h3>
+            <h3>Wishpond test project</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://lestgabo.github.io/learn_enough_html/moby_dick",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Learn Enough HTML to Be Dangerous</h3>
+            <h3>HTML fundamentals</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -53,13 +53,13 @@
         <div class="col-md-6">
           <%= link_to "https://lestgabo.github.io/gallery/",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Learn Enough JavaScript to Be Dangerous - Gallery with unbtrosive JavaScript</h3>
+            <h3> Gallery with unbtrosive JavaScript</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://lestgabo.github.io/learn_enough_javascript/palindrome.html",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Learn Enough JavaScript to Be Dangerous - Palindrome Detector</h3>
+            <h3>Palindrome detector</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -68,7 +68,13 @@
         <div class="col-md-6">
           <%= link_to "https://react-color-picker.herokuapp.com/about",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>React on Rails Practice - React Color Picker</h3>
+            <h3>React on Rails - color picker</h3>
+          <% end %>
+        </div>
+        <div class="col-md-6">
+          <%= link_to "http://www.fademe.ca",
+          class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
+            <h3>Landing page - Fademe</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -83,13 +89,13 @@
         <div class="col-md-6">
           <%= link_to "https://github.com/lestgabo/doorlocker",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Web Controllable Door Locker</h3>
+            <h3>Web controllable door locker</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://github.com/lestgabo/subtitles/blob/master/README.md",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Raspberry Pi LCD Touchscreen MPI3508 - how to use instructions</h3>
+            <h3>Raspberry Pi LCD touchscreen MPI3508 - how to use instructions</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -99,18 +105,18 @@
   <hr>
 
     <div id="robotics-researcher-co-op" class="text-left">
-      <h2><strong> Robotics Researcher Co-op </strong></h2>
+      <h2><strong> Robotics researcher co-op </strong></h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://www.youtube.com/watch?v=ZmU-hsg7x38",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>YouTube - Oculus Robot - Platform Control</h3>
+            <h3>YouTube - Oculus robot - platform control</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "//github.com/elderlyrobotics",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>GitHub - Oculus Robot</h3>
+            <h3>GitHub - Oculus robot</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -119,13 +125,13 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRVpxeE00TVJ6WHM",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank" do %>
-            <h3>Oculus Robot - User Manual </h3>
+            <h3>Oculus robot - user manual </h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNem9Ub2pPU1JXV28",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Oculus Robot - Developer's Manual Part 1</h3>
+            <h3>Oculus robot - developer's manual part 1</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -134,13 +140,13 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNMmEzajBpdV83OTQ",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Oculus Robot - Developer's Manual Part 2</h3>
+            <h3>Oculus robot - developer's manual part 2</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/open?id=0B9Dt_lzGChXNU3FLdXJ3dWloX1E",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Oculus Robot - Developer's Manual Part 3</h3>
+            <h3>Oculus robot - developer's manual part 3</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -152,18 +158,18 @@
     <div id="simon-fraser-university" class="text-left">
       <h2><strong> Simon Fraser University </strong></h2>
       <br>
-      <h2> Engineering Science 483 - Modern Control Systems </h2>
+      <h2> Engineering Science 483 - Modern control systems </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNdXBmQ29SRjVSR2M/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Project 1 - Research Paper Simulation</h3>
+            <h3>Project 1 - Research paper simulation</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNOG5rSUZiMXgyOGM/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Project 2 - Inverted Pendulum</h3>
+            <h3>Project 2 - Inverted pendulum</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 483 - Modern Control Systems -->
@@ -171,7 +177,7 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 477 - Biomedical Image Acquisition </h2>
+      <h2>  Engineering Science 477 - Biomedical image acquisition </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVkI3dXI4X1MxeUU/view",
@@ -182,7 +188,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNV2pOUGQ5YXRacWM/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 2 - Simulated Computed Tomography</h3>
+            <h3>Lab 2 - Simulated computed tomography</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 477 - Biomedical Image Acquisition  -->
@@ -197,7 +203,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNW1TZ1pYSkRtT3M/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 4 - Magnetic Resonance Imaging (MRI)</h3>
+            <h3>Lab 4 - Magnetic resonance imaging (MRI)</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 477 - Biomedical Image Acquisition  -->
@@ -205,7 +211,7 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 476 - Biophotonics and Microscopy Techniques </h2>
+      <h2>  Engineering Science 476 - Biophotonics and microscopy techniques </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRThlbG9YeGVaMXM/view",
@@ -216,7 +222,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNNmtuZ3FYVjRxV28/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 2 - Optical Coherence Tomography</h3>
+            <h3>Lab 2 - Optical coherence tomography</h3>
           <% end %>
         </div>
       </div><!-- row -->
@@ -225,7 +231,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNN1pBa1pGa1IyZ0E/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 3 - Quantitative Phase Microscopy</h3>
+            <h3>Lab 3 - Quantitative phase microscopy</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 476 - Biophotonics and Microscopy Techniques -->
@@ -233,12 +239,12 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 470 - Optical Engineering and Laser Applications </h2>
+      <h2>  Engineering Science 470 - Optical engineering and laser applications </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNUHU5N3FKZ2ZjYXc/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 1 - Basic Optics</h3>
+            <h3>Lab 1 - Basic optics</h3>
           <% end %>
         </div>
         <div class="col-md-6">
@@ -253,7 +259,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNaG1TUTc1Q2xqUW8/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 3 - Laser Gaussian Beam</h3>
+            <h3>Lab 3 - Laser gaussian beam</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 470 - Optical Engineering and Laser Applications -->
@@ -261,18 +267,18 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 305W/440W - Capstone Project </h2>
+      <h2>  Engineering Science 305W/440W - Capstone project </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNeURWWWtwdGJiWkk/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Smart Post - Design Specification</h3>
+            <h3>Smart Post - Design specification</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNWDJNRXBIMkRJVHc/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Smart Post - Test Plan</h3>
+            <h3>Smart Post - Test plan</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 305W/440W - Capstone Project -->
@@ -281,7 +287,7 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNRmdtR0dvLVlDQjA/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Smart Post - Post-Mortem</h3>
+            <h3>Smart Post - Post-mortem</h3>
           <% end %>
         </div>
         <div class="col-md-6">
@@ -295,13 +301,13 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 424 - Multimedia Communications Engineering </h2>
+      <h2>  Engineering Science 424 - Multimedia communications engineering </h2>
       <div class="row">
         <div class="col-md-6">
           <!-- col-md-offset-4 -->
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNTFhkTzJQQTFMVFE/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Project Report - Philter</h3>
+            <h3>Android application - Philter</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 424 - Multimedia Communications Engineering -->
@@ -309,13 +315,13 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 406 - Engineering Ethics, Law, and Professional Practice </h2>
+      <h2>  Engineering Science 406 - Engineering ethics, law, and professional practice </h2>
       <div class="row">
         <div class="col-md-6">
           <!-- col-md-offset-4 -->
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNVzM5Y3JLbGpUM2c/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Solar Panel Sustainability</h3>
+            <h3>Solar panel sustainability</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 406 - Engineering Ethics, Law, and Professional Practice -->
@@ -323,18 +329,18 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 327 - Communication Systems </h2>
+      <h2>  Engineering Science 327 - Communication systems </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNYmtQcFlkdDV1RWs/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 2 - Amplitude Modulation</h3>
+            <h3>Lab 2 - Amplitude modulation</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNSUxZYk5QRXFjVnM/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 3 - FM Mod and Demod</h3>
+            <h3>Lab 3 - FM modulation and demododulation</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 327 - Communication Systems -->
@@ -342,12 +348,12 @@
       <br>
       <br>
 
-      <h2>  Engineering Science 316 - Introduction to Electrodynamics for Engineers </h2>
+      <h2>  Engineering Science 316 - Introduction to electrodynamics for engineers </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/1G3iNloqC5cgtvSLjNdUbg2wpRpQAJ4ET/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Design Project - Qi Charging Station</h3>
+            <h3>Design project - Qi charging station</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 316 - Introduction to Electrodynamics for Engineers -->
@@ -355,13 +361,13 @@
       <br>
       <br>
 
-      <h2>Engineering Science 304 - Human Factors and Usability Engineering </h2>
+      <h2>Engineering Science 304 - Human factors and usability engineering </h2>
       <div class="row">
         <div class="col-md-6">
           <!-- col-md-offset-4 -->
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNd1FpenlyVG1vWGs/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Self-Checkout Machines</h3>
+            <h3>Self-checkout machines</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 304 - Human Factors and Usability Engineering -->
@@ -374,13 +380,13 @@
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNY1VrVFZ6Nnh6Z00/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 1 - Operational Amplifier Circuits (Opamps)</h3>
+            <h3>Lab 1 - Operational amplifier circuits (Opamps)</h3>
           <% end %>
         </div>
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNa3RxdkRLRE5lWW8/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Lab 2 - Diodes and simple diode Circuits</h3>
+            <h3>Lab 2 - Diodes and simple diode circuits</h3>
           <% end %>
         </div>
       </div> <!-- /div row of Engineering Science 225 - Microelectronics I -->
@@ -403,12 +409,12 @@
       <br>
       <br>
 
-      <h2>  Physics 131 - Physics Laboratory I </h2>
+      <h2>  Physics 131 - Physics laboratory I </h2>
       <div class="row">
         <div class="col-md-6">
           <%= link_to "https://drive.google.com/file/d/0B9Dt_lzGChXNODFNejdiVEljUHc/view",
           class:"hvr-float-shadow", rel:"nofollow noopener", target: "_blank"  do %>
-            <h3>Force and Moving Charges</h3>
+            <h3>Force and moving charges</h3>
           <% end %>
         </div>
       </div> <!-- /div row of PHYS 131 - Physics Laboratory I -->
@@ -419,7 +425,7 @@
 
   <br>
 
-  <div class="text-center">
+  <div id="topButton" class="text-center">
     <div onclick="topFunction()" class="hvr-float-shadow" title="Back to top">
       <h2>Back to top</h2>
     </div>
